fixed vertical-align

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -417,6 +417,17 @@
 }
 
 
+// VERTICAL ALIGN
+// -------------------------
+@mixin vertical-align {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+
 
 // MEDIA QUERIES
 // --------------------------------------------------
